N°7431 - Create a MFA module light - refactor interface

--- a/templates/main.ready.js.twig
+++ b/templates/main.ready.js.twig
@@ -2,7 +2,7 @@
 {# @license     http://opensource.org/licenses/AGPL-3.0 #}
 
 {% for Section in Params.aSections %}
-	{% if Section.sJsTwig %}
-		{% include Section.sJsTwig %}
+	{% if Section.sReadyJsTwig %}
+		{% include Section.sReadyJsTwig %}
 	{% endif %}
 {% endfor %}
