--- a/templates/MyAccountTab.ready.js.twig
+++ b/templates/MyAccountTab.ready.js.twig
@@ -1,7 +1,7 @@
 {# @copyright   Copyright (C) 2010-2024 Combodo SARL #}
 {# @license     http://opensource.org/licenses/AGPL-3.0 #}
 
-{% for Section in Params.aSections %}
+{% for Section in aSections %}
 	{% if Section.sReadyJsTwig %}
 		{% include Section.sReadyJsTwig %}
 	{% endif %}
